--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body{
   h2 { font-size: 3rem; }
 
   #left {
-    position: fixed;
+    position: absolute;
     top: 0;
     left:0;
     bottom: 50px;
@@ -42,7 +42,7 @@ body{
     background-color: rgba(0,0,0, 0.8);
   }
   #right{
-    position: fixed;
+    position: absolute;
     margin-bottom: 200px;
     top: 0;
     right:0;
