--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,19 +16,26 @@ body{
   }
   
   /* page content */
+
+  .heading{
+    position: fixed;
+    bottom: 70px;
+    left: 120px;
+  }
+
+
   h1, h2 {
     color: white;
     font-family: Trebuchet MS;
     font-weight: bold;
-    text-align: center;
+    margin: 0;
   }
   
   h1 {
-    font-size: 6rem;
-    margin-top: 30vh; 
+    font-size: 30px; 
   }
   
-  h2 { font-size: 3rem; }
+  h2 { font-size: 150px; }
 
   #left {
     position: absolute;
@@ -38,8 +45,8 @@ body{
     width: 100vh;
     transform-origin: left top;
     transform: rotate(-90deg) translateX(-100%);
-    height: 50px;
-    background-color: rgba(0,0,0, 0.8);
+    height: 70px;
+    background-color: rgba(37, 35, 35, 0.5);
   }
   #right{
     position: absolute;
@@ -49,31 +56,57 @@ body{
     width: 100vh;
     transform-origin: right top;
     transform: rotate(90deg) translateX(100%);
-    height: 50px;
-    background-color: rgba(0,0,0, 0.8);
+    height: 70px;
+    background-color: rgba(37, 35, 35, 0.5);
   }
   #top{
     position: fixed;
     top: 0;
     width: 100vw;
-    height: 50px;
-    background-color: rgba(0,0,0, 0.8);
+    height: 70px;
+    background-color: rgba(37, 35, 35, 0.5);
   }
   #bottom{
     position: fixed;
     bottom: 0;
     width: 100vw;
-    height: 50px;
-    background-color: rgba(0,0,0, 0.8);
+    height: 70px;
+    background-color: rgba(37, 35, 35, 0.5);
   }
-  
-  ul {
+
+  #left ul{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    margin: 75px 0 0 110px;
+  }
+
+  #left ul li{
+    display: block;
+    letter-spacing: 3px;
+    margin-right: 10px;
+    
+  }
+  #left ul li a{
+    font-size: 16px;
+  }
+
+  /* ul {
     margin: 15px 20%;
     display: flex;
-    /* flex-flow: row wrap; */
+    flex-flow: row wrap;
     align-items: center;
+  } */
+
+  #bottom ul{
+    display: flex;
+    justify-content: flex-start;
+    list-style: none;
   }
-  ul li {
+  #bottom ul li{
+    font-size: 30px;
+  }
+  /* ul li {
     height: 20px;
     list-style: none;
     text-align: center;
@@ -81,7 +114,21 @@ body{
     display: flex;
     align-items: center;
     flex: 1;
+  } */
+
+  #right ul{
+    margin: 50px;
+    display: flex;
+    list-style: none;
   }
+
+  #right ul li{
+    display: block;
+    /* letter-spacing: 3px; */
+    margin-right: 0;
+    
+  }
+  
 
   ul li a{
     text-decoration: none;
