--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('http://fonts.cdnfonts.com/css/ink-free');
+
 body{
     margin: 0;
     padding: 0;
@@ -65,6 +67,7 @@ body{
     width: 100vw;
     height: 70px;
     background-color: rgba(37, 35, 35, 0.5);
+    font-family: 'Ink Free', sans-serif;
   }
   #bottom{
     position: fixed;
@@ -85,10 +88,15 @@ body{
     display: block;
     letter-spacing: 3px;
     margin-right: 10px;
+    font-weight: 500;
     
   }
   #left ul li a{
     font-size: 16px;
+  }
+
+  ul li a{
+    font-family:'Courier New', Courier, monospace;
   }
 
   /* ul {
