--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,12 +32,6 @@ body{
     font-weight: bold;
     margin: 0;
   }
-  
-  h1 {
-    font-size: 30px; 
-  }
-  
-  h2 { font-size: 150px; }
 
   #left {
     position: absolute;
@@ -48,6 +42,7 @@ body{
     transform-origin: left top;
     transform: rotate(-90deg) translateX(-100%);
     height: 70px;
+    z-index: 0;
     background-color: rgba(37, 35, 35, 0.5);
   }
   #right{
@@ -56,6 +51,7 @@ body{
     top: 0;
     right:0;
     width: 100vh;
+    z-index: -1 !important;
     transform-origin: right top;
     transform: rotate(90deg) translateX(100%);
     height: 70px;
@@ -101,31 +97,6 @@ body{
     font-family:'Courier New', Courier, monospace;
   }
 
-  /* ul {
-    margin: 15px 20%;
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-  } */
-
-  #bottom ul{
-    display: flex;
-    justify-content: flex-start;
-    list-style: none;
-  }
-  #bottom ul li{
-    font-size: 30px;
-  }
-  /* ul li {
-    height: 20px;
-    list-style: none;
-    text-align: center;
-    transition: background 0.5s;
-    display: flex;
-    align-items: center;
-    flex: 1;
-  } */
-
   #right ul{
     margin: 50px;
     display: flex;
@@ -157,3 +128,71 @@ body{
         background-size: cover;
       }
   } */
+
+  .menu-ul{
+    display: none;
+    list-style: none;
+  }
+
+  .menu-ul li {
+    background: #000;
+    margin-bottom: 10px;
+    padding: 0 10px
+  }
+
+  .menu-ul li a{
+    color: #fff;
+  }
+
+  /* .ham-menu:hover .menu-ul {
+    display: block;
+  } */
+
+  .overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.95);
+    overflow-x: hidden;
+    transition: 0.5s;
+  }
+  
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    margin-top: 30px;
+  }
+  
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
+  }
