--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ body{
   }
 
   #right ul{
-    margin: 50px;
+    margin: 30px;
     display: flex;
     list-style: none;
   }
@@ -155,8 +155,8 @@ body{
     z-index: 2;
     top: 0;
     left: 0;
-    background-color: rgb(0, 1, 43);
-    background-color: rgba(0, 1, 43, 0.95);
+    background-color: rgb(0,0,0);
+    background-color: rgba(0, 0, 0, 0.95);
     overflow-x: hidden;
     transition: 0.5s;
   }
