--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ body{
   .menu-ul li a{
     color: #fff;
     cursor: pointer;
-    font-family: monospace;
+    font-family: Arial, Helvetica, sans-serif !important;
   }
 
   /* .ham-menu:hover .menu-ul {
